resolve layout problems

--- a/src/index.css
+++ b/src/index.css
@@ -34,12 +34,7 @@ ul {
   list-style: none;
 }
 
-*,
-a {
+* {
   box-sizing: border-box;
   text-decoration: none;
-}
-
-a {
-  color: #ffffff;
 }
